--- a/charts/registry-scanner/templates/secret.yaml
+++ b/charts/registry-scanner/templates/secret.yaml
@@ -12,6 +12,9 @@ data:
   aws_access_key_id: {{ .Values.config.aws.accessKeyId | b64enc | quote }}
   aws_secret_access_key: {{ .Values.config.aws.secretAccessKey | b64enc | quote }}
   aws_region: {{ required "A valid .Values.config.aws.region is required" .Values.config.aws.region | b64enc | quote }}
+  {{- else if eq .Values.config.registryType "dockerv2" }}
+  registryUser: {{ .Values.config.registryUser | b64enc | quote }}
+  registryPassword: {{ .Values.config.registryPassword | b64enc | quote }}
   {{- else }}
   registryUser: {{ required "A valid .Values.config.registryUser is required" .Values.config.registryUser | b64enc | quote }}
   registryPassword: {{ required "A valid .Values.config.registryPassword is required" .Values.config.registryPassword | b64enc | quote }}
