--- a/charts/agent/templates/clusterrole.yaml
+++ b/charts/agent/templates/clusterrole.yaml
@@ -27,6 +27,13 @@ rules:
       - list
       - watch
   - apiGroups:
+    - ""
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
+  - apiGroups:
       - apps
     resources:
       - daemonsets
