test: fix description

--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -13,7 +13,7 @@ tests:
           kind: ConfigMap
           apiVersion: v1
           template: webhook/admissioncontrollerconfigmap.yaml
-#  - it: Creates the configmap if webhook.acConfig is present
+#  - it: Does not create the configmap if webhook.acConfig is not present
 #    asserts:
 #      - containsDocument:
 #          kind: ConfigMap
