--- a/charts/admission-controller/templates/webhook/clusterrole.yaml
+++ b/charts/admission-controller/templates/webhook/clusterrole.yaml
@@ -16,7 +16,9 @@ rules:
   - ""
   resources:
   - pods
+{{- if .Values.webhook.acConfig }}
   - configmaps
+{{- end }}
   verbs:
   - get
 {{- if .Values.webhook.acConfig }}
