--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -14,11 +14,26 @@ tests:
           kind: ConfigMap
           apiVersion: v1
         template: templates/webhook/admissioncontrollerconfigmap.yaml
-      - contains:
-          path: rules
+  - it: Creates the clusterrole if webhook.acConfig is present
+    set:
+      webhook:
+        acConfig: |
+          foo: bar
+          fizz: buzz
+    asserts:
+      - isSubset:
+          path: rules[2]
           content:
             apiGroups: ["batch"]
-          any: true
+            resources: ["jobs"]
+            verbs: ["create", "get", "delete"]
+        template: templates/webhook/clusterrole.yaml
+      - isSubset:
+          path: rules[1]
+          content:
+            apiGroups: [""]
+            resources: ["pods", "configmaps"]
+            verbs: ["get"]
         template: templates/webhook/clusterrole.yaml
   - it: Does not create the configmap if webhook.acConfig is not present
     set: {}
@@ -27,7 +42,13 @@ tests:
           path: rules
           content:
             apiGroups: [ "batch" ]
-          any: true
+        template: templates/webhook/clusterrole.yaml
+      - isSubset:
+          path: rules[1]
+          content:
+            apiGroups: [""]
+            resources: ["pods"]
+            verbs: ["get"]
         template: templates/webhook/clusterrole.yaml
 #    asserts:
 #      - isNullOrEmpty:
