fix(agent): don't duplicate `cointerface_enabled` field in deployment agent configmaps
The value `cointerface_enabled: true` is hardcoded into the deployment agent's configmap
by design, but if the value were overridden in `sysdig.settings` the field would end up
being duplicated when the deployment configmap blindly rendered out that block. This fix
addresses that issue by omitting that key when rendering the set of values from the
`sysdig.settings` block.

--- a/charts/agent/templates/configmap-deployment.yaml
+++ b/charts/agent/templates/configmap-deployment.yaml
@@ -52,7 +52,7 @@ data:
   {{- $caFilePath := printf "%s%s" "/etc/ca-certs/" (include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl)) }}
   {{- $mergedSettings := mergeOverwrite $baseSettings (dict "http_proxy" (dict "ca_certificate" $caFilePath)) -}}
   {{ toYaml $mergedSettings | nindent 4 }}
-{{- else if .Values.sysdig.settings }}
-  {{ toYaml .Values.sysdig.settings | nindent 4 }}
+{{- else if (omit .Values.sysdig.settings "cointerface_enabled") }}
+  {{ toYaml (omit .Values.sysdig.settings "cointerface_enabled") | nindent 4 }}
 {{- end }}
 {{- end }}
