Access key secret only if provided, and projected secret

--- a/charts/admission-controller/templates/webhook/deployment.yaml
+++ b/charts/admission-controller/templates/webhook/deployment.yaml
@@ -161,12 +161,18 @@ spec:
       volumes:
         {{- if .Values.features.kspmAdmissionController }}
         - name: configs
+          {{- if (include "sysdig.accessKey" .) }}
           secret:
-            {{- if (include "sysdig.accessKey" .) }}
             secretName: {{ include "admissionController.webhook.fullname" . }}-access-key
-            {{- else }}
-            secretName: {{ include "sysdig.existingAccessKeySecret" . }}
-            {{- end }}
+          {{- else }}
+          projected:
+            sources:
+            - secret:
+                name: {{ include "sysdig.existingAccessKeySecret" . }}
+                items:
+                - key: access-key
+                  path: access_key
+          {{- end }}
         {{- end }}
         - name: cert
           secret:
