--- a/charts/admission-controller/templates/webhook/secret.yaml
+++ b/charts/admission-controller/templates/webhook/secret.yaml
@@ -27,7 +27,7 @@ data:
   {{- end }}
 {{- end }}
 ---
-{{- if .Values.features.kspmAdmissionController }}
+{{- if (and .Values.features.kspmAdmissionController (include "sysdig.accessKey" .)) }}
 apiVersion: v1
 kind: Secret
 metadata:
