--- a/charts/admission-controller/templates/webhook/secret.yaml
+++ b/charts/admission-controller/templates/webhook/secret.yaml
@@ -36,5 +36,5 @@ metadata:
   labels:
     {{ include "admissionController.webhook.labels" . | nindent 4 }}
 data:
-  access_key: {{ include "sysdig.accessKey" . | b64enc | quote }}
+  access-key: {{ include "sysdig.accessKey" . | b64enc | quote }}
 {{- end }}
