--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -120,6 +120,14 @@ jobs:
           GPG_PASSPHRASE: "${{ secrets.GPG_PASSPHRASE }}"
           GPG_PRIVATE_KEY: "${{ secrets.GPG_PRIVATE_KEY }}"
 
+      - name: Set up Helm
+        uses: azure/setup-helm@v3.5
+        with:
+          version: v3.10.3
+
+      - name: Bundle chart dependencies
+        run: make deps
+
       - name: Run Chart Releaser
         uses: helm/chart-releaser-action@v1.5.0
         with:
