--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -310,3 +310,34 @@ tests:
       - equal:
           path: data.ise_pprof_enabled
           value: "marzullo"
+
+  - it: "proxy parameters are optional"
+    set:
+      global.sysdig.apiHost: "http://test.com"
+    asserts:
+      - isNull:
+          path: data.http_proxy
+      - isNull:
+          path: data.https_proxy
+      - isNull:
+          path: data.no_proxy
+
+  - it: "has correct value for proxy parameters when provided"
+    set:
+      global:
+        sysdig:
+          apiHost: "http://test.com"
+        proxy:
+          httpProxy: "fake-http-proxy"
+          httpsProxy: "fake-https-proxy"
+          noProxy: "fake-no-proxy"
+    asserts:
+      - equal:
+          path: data.http_proxy
+          value: "fake-http-proxy"
+      - equal:
+          path: data.https_proxy
+          value: "fake-https-proxy"
+      - equal:
+          path: data.no_proxy
+          value: "fake-no-proxy"
