feat(admission-controller): Add KSPM Admission Controller to helm chart (#1214)
Co-authored-by: Lior Alafi <lior.alafi@sysdig.com>

--- a/charts/admission-controller/templates/webhook/secret.yaml
+++ b/charts/admission-controller/templates/webhook/secret.yaml
@@ -26,3 +26,15 @@ data:
   {{ include "sysdig.custom_ca.keyName" (dict "global" .Values.global.ssl "component" .Values.webhook.ssl) }}: {{ include "sysdig.custom_ca.cert" (dict "global" .Values.global.ssl "component" .Values.webhook.ssl "Files" .Subcharts.common.Files) | b64enc | quote }}
   {{- end }}
 {{- end }}
+---
+{{- if (and .Values.features.kspmAdmissionController (include "sysdig.accessKey" .)) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "admissionController.webhook.fullname" . }}-access-key
+  namespace: {{ include "admissionController.namespace" . }}
+  labels:
+    {{ include "admissionController.webhook.labels" . | nindent 4 }}
+data:
+  access-key: {{ include "sysdig.accessKey" . | b64enc | quote }}
+{{- end }}
