--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -17,5 +17,10 @@ data:
   VERIFY_SSL: "{{ .Values.verifySSL }}"
   K8S_AUDIT_DETECTIONS: "{{ .Values.features.k8sAuditDetections }}"
   DENY_ON_ERROR: "{{ .Values.webhook.denyOnError }}"
-  DRY_RUN: "{{ .Values.webhook.dryRun }}"
   HTTP_TIMEOUT: "{{ .Values.webhook.timeoutSeconds }}s"
+  {{- if .Values.features.kspmAdmissionController}}
+  SERVICE_PORT: "{{ .Values.webhook.v2.http.port }}"
+  CERT_LOCATION: /cert
+  EXTERNAL_NATS_URL:  {{ include "admissionController.natsUrl" . }}
+  NATS_INSECURE: "{{.Values.webhook.v2.nats.insecure}}"
+  {{- end}}
