test: assert new role

--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -26,7 +26,7 @@ tests:
           content:
             apiGroups: ["batch"]
             resources: ["jobs"]
-            verbs: ["create", "get", "delete"]
+            verbs: ["create", "get", "delete", "watch"]
         template: templates/webhook/clusterrole.yaml
       - isSubset:
           path: rules[1]
